--- a/etc/production.ini
+++ b/etc/production.ini
@@ -40,8 +40,8 @@ voteit.redis_url = unix://%(here)s/../var/redis.sock
 
 
 arche_pas.providers =
-#    arche_pas.providers.google_oauth2 %(here)s/../var/google.json
-#    arche_pas.providers.facebook %(here)s/../var/facebook.json
+    arche_pas.providers.google_oauth2 %(here)s/../var/google.json
+    arche_pas.providers.facebook %(here)s/../var/facebook.json
 
 
 #List any extra plugins you'll want to use here
