--- a/etc/production.ini
+++ b/etc/production.ini
@@ -26,6 +26,7 @@ zodbconn.uri = zeo://%(here)s/../var/ZEO.sock?cache_size=800MB
 
 arche.includes =
     arche_pas
+    arche_tos
 
 
 #VoteIT/Arche settings
